Vibha-Finance (1)/vibha-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vibha-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:

      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 80

      - path: /user
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 80

      - path: /payment
        pathType: Prefix
        backend:
          service:
            name: payment-service
            port:
              number: 80

      - path: /loan
        pathType: Prefix
        backend:
          service:
            name: loan-service
            port:
              number: 80

      - path: /notify
        pathType: Prefix
        backend:
          service:
            name: notification-service
            port:
              number: 80

      - path: /audit
        pathType: Prefix
        backend:
          service:
            name: audit-service
            port:
              number: 80
